WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55031
Database: Data race: should only touch the transaction queue inside the lock.
https://bugs.webkit.org/show_bug.cgi?id=55031
Summary
Database: Data race: should only touch the transaction queue inside the lock.
Chris Evans
Reported
2011-02-23 03:46:18 PST
Patch forthcoming.
Attachments
Patch
(2.29 KB, patch)
2011-02-23 03:57 PST
,
Chris Evans
abarth
: review+
Details
Formatted Diff
Diff
Patch
(2.31 KB, patch)
2011-02-24 03:22 PST
,
Chris Evans
no flags
Details
Formatted Diff
Diff
Patch
(2.31 KB, patch)
2011-02-24 03:30 PST
,
Chris Evans
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Evans
Comment 1
2011-02-23 03:57:10 PST
Created
attachment 83468
[details]
Patch
Adam Barth
Comment 2
2011-02-23 15:08:26 PST
Comment on
attachment 83468
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83468&action=review
> Source/WebCore/storage/Database.cpp:264 > + m_transactionQueue.append(transaction);
presumably transaction.release()
> Source/WebCore/storage/Database.cpp:285 > + m_transactionQueue.append(transaction);
ditto
Chris Evans
Comment 3
2011-02-24 03:22:13 PST
Created
attachment 83629
[details]
Patch
Chris Evans
Comment 4
2011-02-24 03:30:01 PST
Created
attachment 83630
[details]
Patch
WebKit Commit Bot
Comment 5
2011-02-26 01:16:19 PST
Comment on
attachment 83630
[details]
Patch Clearing flags on attachment: 83630 Committed
r79769
: <
http://trac.webkit.org/changeset/79769
>
WebKit Commit Bot
Comment 6
2011-02-26 01:16:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug