2011-02-26  Chris Evans  <cevans@chromium.org>

Reviewed by Adam Barth.

        Database: Data race: should only touch the transaction queue inside the
        lock.
        https://bugs.webkit.org/show_bug.cgi?id=55031

        * storage/Database.cpp:
        (WebCore::Database::changeVersion): only touch queue inside lock.
        (WebCore::Database::runTransaction): only touch queue inside lock.

Canonical link: https://commits.webkit.org/69686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79769 268f45cc-cd09-0410-ab3c-d52691b4dbfc